--- a/css/nav.css
+++ b/css/nav.css
@@ -2,7 +2,6 @@ nav ul{
 	list-style-type:none;
 	margin:auto;
 	padding:0;
-	overflow:hidden;
 	background: -webkit-linear-gradient(left, #99f, yellow); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(right, #99f , yellow); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(right, #99f , yellow); /* For Firefox 3.6 to 15 */
@@ -12,13 +11,13 @@ nav ul{
 	top:0px;
 	left:0px;
 	width:100%;
-	box-shadow:10px 10px 5x 0px rgba(150,150,150,0.3);
+	box-shadow:10px 10px 5px 0px rgba(150, 150, 150, 0.3);
 }
 nav ul li{
 	float:left;
 	border-right:1px solid #bbb;	
 }
-nav ul li:last-child {	
+nav ul li:last-child {
 	border-right:none;
 	float:right;
 }
@@ -38,31 +37,29 @@ nav ul li a:hover:not(.active){
 	color:black;
 	transition:2s;
 }
-li.tech{
-	position:relative;
-		}
-div.navi{
-	display:none;
-	position:absolute;
-	top:100%;
-	left:0;
-	background:#eee;
-	padding:0;
-	box-shadow:10px 10px 5x 0px rgba(150,150,150,0.3);
-	border-radius:5px;
-}
-nav ul li:hover div.navi{
-	display:block;
-	z-index:1;
-	min-width:100px;
-}
-div.navi a{
-	display:block;
-	text-decoration:none;
-	border-radius:5px;
-}
-
 .active {
 	background-color:black;
 	color:white;
+}
+.navi{
+	display:none;
+	position:absolute;
+	top:100%;
+	box-shadow:10px 10px 5px 0px rgba(150, 150, 150, 0.3);
+	border-radius:5px;
+}
+.navi a{
+	color:Green;
+	
+}
+li:hover .navi{
+	display:block;
+	z-index:1;
+	min-width:120px;
+	background: -webkit-linear-gradient(left, white , #eee); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, white, #eee); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, white, #eee); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, white , #eee); /* Standard syntax (must be last) */
+	
+	
 }
